wp-content/themes/coincademy_reborn/scss/components/footer.scss
footer {
    padding-top: 40px !important;
    padding-bottom: 40px !important;
}

footer ul {
    list-style: none;
    padding: 0px;
    margin: 0px;
}

footer span {
    color: #848484;
    font-weight: bold;
    text-transform: uppercase;
    margin-bottom: 15px;
    display: block;
    font-size: .9em;
}

footer ul li {
    margin: 10px 0px;
    font-size: .85em;
    color: #9e9e9e;
}
footer ul li a:hover, footer ul li a:active {
    color: $color-blue;
}

footer .copyright {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    margin-top: 50px;
    justify-content: space-between;
    position: relative;
    font-size: .9rem;
}

footer .copyright::after {
    display: block;
    position: absolute;
    content: '';
    height: 0px;
    width: 100%;
    border-bottom: 1px solid #f2f2f2;
    top: -25px;
    left: 0px;
}

footer .copyright div:first-child {
    text-align: left;
}

footer .copyright div:last-child {
    text-align: right;
}

.social-icon img {
	width: 2rem;
	height: 2rem;
	margin-left: 1rem;
}
.social-icon:hover img {
	opacity: .8;
}


@media only screen and (max-width: 767px) {

    /* footer */

    footer div:first-child {
        text-align: center;
        padding-bottom: 40px;
    }

    footer div:nth-child(4), footer div:nth-child(5) {
        margin-top: 20px;
    }

    footer .copyright div:first-child, footer .copyright div:last-child {
        text-align: center;
    }
}

